# SVP-Challenge

./: BKZ.cpp  BKZ.hpp  CMakeLists.txt  DeepBKZ.cpp  DeepBKZ.hpp  DeepLLL.cpp  DeepLLL.hpp  ENUM.cpp  ENUM_fast.cpp  GSOUpdate-DeepLLL_partial.cpp  GSOUpdate-LLL_partial.cpp  Gram_Schmidt.cpp  LLL.cpp  LLL.hpp  MLLL.cpp  MLLL.hpp  Makefile  Progressive_BKZ.cpp  Progressive_BKZ.hpp  README.md  Size-reduce.cpp  Size-reduce.hpp  Size-reduce_partial.cpp  Size-reduce_partial.hpp  lagrange_basis_reduction.cpp  lattice.txt  lattice_file.txt  lattice_state_40d_beta_best.txt  lattice_state_80d_beta_best.txt  lattice_types.hpp  main.cpp  main.hpp  mybest_lattice_50d.txt  mybest_lattice_51d.txt  scanning_lattice.cpp
.cph/: .A_OS_Versions.cpp_542023e65a32fff1e76cfeba67598e8d.prob  .A_Sigma_Cubes.cpp_ee107ce5ae229fc98b90cbbc1e726f31.prob  .B_The_Odd_One_Out.cpp_16df49f39bbfb1037ea6ec5daec0d1d8.prob  .C_Upgrade_Required.cpp_f43ab226ebca04a3514b9c7b960723e7.prob
